filter test not csproj test

--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -18,6 +18,10 @@ on:
         required: false
         default: '6'
         type: string
+      test-filter:
+        required: false
+        default: 'trigger!=manual&FullyQualifiedName~UnitTests'
+        type: string
 
     secrets:
       nuget-read-pat:
@@ -66,30 +70,8 @@ jobs:
       - name: Build
         run: dotnet build ${{ inputs.solution-name }} --configuration ${{ env.CONFIGURATION }} --verbosity ${{ inputs.build-verbosity }} --property WarningLevel=0 /clp:ErrorsOnly --no-restore
 
-      - name: List_Tests
-        #run: dotnet test ${{ inputs.solution-name }} --filter trigger!=manual --configuration ${{ env.CONFIGURATION }} --no-build
-        shell: bash
-        run: |
-          IFS=',' read -ra ADDR <<< "${{ steps.get_test_sources.outputs.test_sources }}"
-          for test_source in "${ADDR[@]}"; do
-            if [[ -f "$test_source" ]]
-            then
-              dotnet test "$test_source" --filter trigger!=manual --configuration ${{ env.CONFIGURATION }} --no-build --list-tests
-            else
-              echo "Test source '$test_source' does not exist"
-            fi
-          done
-
       - name: Test
         #run: dotnet test ${{ inputs.solution-name }} --filter trigger!=manual --configuration ${{ env.CONFIGURATION }} --no-build
         shell: bash
         run: |
-          IFS=',' read -ra ADDR <<< "${{ steps.get_test_sources.outputs.test_sources }}"
-          for test_source in "${ADDR[@]}"; do
-            if [[ -f "$test_source" ]]
-            then
-              dotnet test "$test_source" --filter trigger!=manual --configuration ${{ env.CONFIGURATION }} --no-build
-            else
-              echo "Test source '$test_source' does not exist"
-            fi
-          done
+          dotnet test ${{ inputs.solution-name }} --filter ${{ inputs.test-filter }} --configuration ${{ env.CONFIGURATION }} --no-build
