--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -34,10 +34,10 @@ on:
         required: false
         default: '8'
         type: string
-      enable-integration-tests:
-        description: 'true to run tests marked as integration tests; otherwise, false. The default value is false.'
+      integration-test-environment:
+        description: '1 to run tests marked as integration tests; otherwise, 0. The default value is 0.'
         required: false
-        default: 'false'
+        default: '0'
         type: string
       test-filter:
         required: false
@@ -91,9 +91,8 @@ jobs:
           show-progress: false
 
       - name: Setup Integration test environment
-        if: ${{ inputs.enable-integration-tests == 'true' }} 
         run: |
-          echo "WINT_INTEGRATION_TEST_ENVIRONMENT=1" >> $GITHUB_ENV
+          echo "WINT_INTEGRATION_TEST_ENVIRONMENT=${{ inputs.integration-test-environment }}" >> $GITHUB_ENV
 
       - name: azure-credentials-to-env
         shell: bash
@@ -101,7 +100,7 @@ jobs:
           echo "AZURE-CREDENTIALS=${{ secrets.azure-credentials }}" >> $GITHUB_ENV
 
       - name: 'az login'
-        if: ${{ env.AZURE-CREDENTIALS }} != ''
+        if: ${{ env.AZURE-CREDENTIALS != '' }}
         uses: azure/login@v1
         with:
           creds: ${{ env.AZURE-CREDENTIALS }}
