rm hard-coded test-filter condition

--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -41,7 +41,7 @@ on:
         type: string
       test-filter:
         required: false
-        default: 'trigger!=manual&FullyQualifiedName~UnitTests'
+        default: 'trigger!=manual'
         type: string
 
     secrets:
