--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -43,6 +43,11 @@ on:
         required: false
         default: 'trigger!=manual'
         type: string
+      coverage-report-retention-days:
+        description: 'The number of days to retain the code coverage report artifact named coverage-report. If a number less than 1 is specified, no code coverage report artifact is created. The default value is 1 day(s).'
+        required: false
+        default: 1
+        type: number
 
     secrets:
       nuget-read-pat:
@@ -124,12 +129,15 @@ jobs:
           dotnet test ${{ inputs.solution-name }} --filter "${{ inputs.test-filter }}" --configuration ${{ env.CONFIGURATION }} --logger:"console;verbosity=${{ inputs.test-verbosity }};consoleLoggerParameters=${{ inputs.console-logger-parameters }}" --collect:"XPlat Code Coverage" --no-build
 
       - name: Create Coverage Report
+        if: ${{ inputs.coverage-report-retention-days >= 1 }}
         shell: bash
         run: |
           reportgenerator -reports:**/*.cobertura.xml -targetdir:${{ env.COVERAGE_REPORT_PATH }}
 
       - name: Upload Coverage Report
+        if: ${{ inputs.coverage-report-retention-days >= 1 }}
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.COVERAGE_REPORT_ARTIFACT }}
           path: ${{ env.COVERAGE_REPORT_PATH }}
+          retention-days: ${{ inputs.coverage-report-retention-days }}
