--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -58,10 +58,22 @@ on:
         required: false
 
 jobs:
+  restore_nuget_cache:
+    name: Cache nuget restore artifacts
+    uses: actions/cache@v3
+    with:
+      path: ~/.nuget/packages
+      key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+      restore-keys: |
+        ${{ runner.os }}-nuget-
+
   test:
     name: Build and Test (${{ inputs.solution-name }})
     runs-on: ubuntu-latest
     continue-on-error: false
+    outputs:
+      head_branch: ${{ steps.get_head_branch_name.outputs.head_branch }}
+
     env:
       CONFIGURATION: release
       WINT_GITHUB_NUGET_SOURCE_URL: 'https://nuget.pkg.github.com/WintDev/index.json'
@@ -89,10 +101,6 @@ jobs:
           dotnet-version: |
             ${{ inputs.dotnet-version }}.0.x
 
-      - name: Install dotnet-reportgenerator
-        run: |
-          dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.2.0
-
       - name: Add GitHub Nuget registry
         run: |
           dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
@@ -102,20 +110,15 @@ jobs:
         with:
           show-progress: false
 
+      - name: Get HEAD branch name
+        id: get_head_branch_name
+        run: |
+          HEAD_BRANCH=$(git remote show origin | grep 'HEAD branch' | cut -d' ' -f5)
+          echo "head_branch=$HEAD_BRANCH" >> $GITHUB_OUTPUT
+
       - name: Setup Integration test environment
         run: |
           echo "WINT_INTEGRATION_TEST_ENVIRONMENT=${{ inputs.integration-test-environment }}" >> $GITHUB_ENV
-
-      - name: azure-credentials-to-env
-        shell: bash
-        run: |
-          echo "AZURE-CREDENTIALS=${{ secrets.azure-credentials }}" >> $GITHUB_ENV
-
-      - name: 'az login'
-        if: ${{ env.AZURE-CREDENTIALS != '' }}
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.azure-credentials }}
 
       - name: Restore
         run: dotnet restore ${{ inputs.solution-name }} --verbosity ${{ inputs.build-verbosity }} --property WarningLevel=${{ inputs.warning-level }} /clp:${{ inputs.console-logger-parameters }}
@@ -126,7 +129,13 @@ jobs:
       - name: Test
         shell: bash
         run: |
-          dotnet test ${{ inputs.solution-name }} --filter "${{ inputs.test-filter }}" --configuration ${{ env.CONFIGURATION }} --logger:"console;verbosity=${{ inputs.test-verbosity }};consoleLoggerParameters=${{ inputs.console-logger-parameters }}" --collect:"XPlat Code Coverage" --no-build
+          dotnet test ${{ inputs.solution-name }} \
+          --filter "${{ inputs.test-filter }}" \
+          --configuration ${{ env.CONFIGURATION }} \
+          --logger:"console;verbosity=${{ inputs.test-verbosity }};consoleLoggerParameters=${{ inputs.console-logger-parameters }}" \
+          --collect:"XPlat Code Coverage" \
+          /p:ExcludeByAttribute="GeneratedCodeAttribute,CompilerGeneratedAttribute"
+          --no-build
 
       - name: Upload Coverage Artifacts
         if: ${{ inputs.coverage-report-retention-days >= 1 }}
@@ -135,3 +144,43 @@ jobs:
           name: ${{ env.COVERAGE_REPORT_ARTIFACT }}
           path: '**/*.cobertura.xml'
           retention-days: ${{ inputs.coverage-report-retention-days }}
+
+  coverage_report:
+    name: 'Create coverage report'
+    runs-on: ubuntu-latest
+    needs: test
+    if: ${{ github.ref_name == needs.test.outputs.head_branch }}
+    steps:
+      - name: Install dotnet-reportgenerator
+        run: |
+          dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.2.0
+
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+            name: ${{ env.COVERAGE_REPORT_ARTIFACT }}
+
+  calculate-storage-container-name:
+    name: 'Calculate Storage Container Name'
+    runs-on: ubuntu-latest
+    needs: [test, coverage_report]
+    if: ${{ github.ref_name == needs.test.outputs.head_branch }}
+    continue-on-error: false
+    outputs:
+      storage_container_name: ${{ steps.get_container_name.outputs.name }}
+    steps:
+      - name: Convert GitHub Repository Name to Azure Storage Container name
+        id: get_container_name
+        run: |
+          NAME="${GITHUB_REPOSITORY,,}"
+          NAME="${NAME//[^a-zA-Z0-9]/-}"
+          echo "name=$NAME" >> $GITHUB_OUTPUT
+
+  # persist-coverage-reports:
+  #   needs: [test, coverage_report, calculate-storage-container-name]
+  #   if: ${{ github.ref_name == needs.test.outputs.head_branch }}
+  #   uses: WintDev/actions/.github/workflows/az-storage-upload.yml@experimental
+  #   with:
+  #     storage-container-name: ${{ needs.calculate-storage-container-name.outputs.storage_container_name }}
+  #     source: 
+  #   secrets: inherit
