--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -58,16 +58,6 @@ on:
         required: false
 
 jobs:
-  restore_nuget_cache:
-    name: Cache nuget restore artifacts
-    uses: actions/cache@v3
-    with:
-      path: ~/.nuget/packages
-      key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-      restore-keys: |
-        ${{ runner.os }}-nuget-
-
-
   test:
     name: Build and Test (${{ inputs.solution-name }})
     runs-on: ubuntu-latest
@@ -120,6 +110,14 @@ jobs:
       - name: Setup Integration test environment
         run: |
           echo "WINT_INTEGRATION_TEST_ENVIRONMENT=${{ inputs.integration-test-environment }}" >> $GITHUB_ENV
+
+      - name: Cache nuget restore artifacts
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
 
       - name: Restore
         run: dotnet restore ${{ inputs.solution-name }} --verbosity ${{ inputs.build-verbosity }} --property WarningLevel=${{ inputs.warning-level }} /clp:${{ inputs.console-logger-parameters }}
