--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -111,11 +111,19 @@ jobs:
         run: |
           echo "WINT_INTEGRATION_TEST_ENVIRONMENT=${{ inputs.integration-test-environment }}" >> $GITHUB_ENV
 
+      - name: Get nuget cache key suffix
+        id: get_cache_key
+        shell: bash
+        run: |
+          HASH=${{ hashFiles('**/packages.lock.json') }}
+          echo "hash=$HASH" >> $GITHUB_OUTPUT
+
       - name: Cache nuget restore artifacts
+        if: ${{ steps.get_cache_key.outputs.hash }} != ''
         uses: actions/cache@v3
         with:
           path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          key: ${{ runner.os }}-nuget-${{ steps.get_cache_key.outputs.hash }}
           restore-keys: |
             ${{ runner.os }}-nuget-
 
