--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -119,7 +119,7 @@ jobs:
           echo "hash=$HASH" >> $GITHUB_OUTPUT
 
       - name: Cache nuget restore artifacts
-        if: ${{ steps.get_cache_key.outputs.hash }} != ''
+        if: ${{ steps.get_cache_key.outputs.hash != '' }} 
         uses: actions/cache@v3
         with:
           path: ~/.nuget/packages
