--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -89,10 +89,6 @@ jobs:
           dotnet-version: |
             ${{ inputs.dotnet-version }}.0.x
 
-      - name: Install dotnet-reportgenerator
-        run: |
-          dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.2.0
-
       - name: Add GitHub Nuget registry
         run: |
           dotnet nuget add source --username WintDev --password ${{ secrets.nuget-read-pat }} --store-password-in-clear-text --name WintDev "${{ env.WINT_GITHUB_NUGET_SOURCE_URL }}"
@@ -116,6 +112,22 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.azure-credentials }}
+
+      - name: Get nuget cache key suffix
+        id: get_cache_key
+        shell: bash
+        run: |
+          HASH=${{ hashFiles('**/packages.lock.json') }}
+          echo "hash=$HASH" >> $GITHUB_OUTPUT
+  
+      - name: Cache nuget restore artifacts
+        if: ${{ steps.get_cache_key.outputs.hash != '' }} 
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ steps.get_cache_key.outputs.hash }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-          
 
       - name: Restore
         run: dotnet restore ${{ inputs.solution-name }} --verbosity ${{ inputs.build-verbosity }} --property WarningLevel=${{ inputs.warning-level }} /clp:${{ inputs.console-logger-parameters }}
