--- a/.github/workflows/test-app-windows.yml
+++ b/.github/workflows/test-app-windows.yml
@@ -52,7 +52,7 @@ jobs:
             ${{ runner.os }}-nuget-        
 
       - name: Restore
-        run: dotnet restore ${{ inputs.solution-name }}
+        run: dotnet restore ${{ inputs.solution-name }} --locked-mode
 
       - name: Build
         run: dotnet build ${{ inputs.solution-name }} --configuration ${{ env.CONFIGURATION }} --no-restore
