--- a/.github/workflows/test-app-windows.yml
+++ b/.github/workflows/test-app-windows.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Restore
-        run: dotnet restore ${{ inputs.solution-name }}
+        run: dotnet restore ${{ inputs.solution-name }} --locked-mode
 
       - name: Build
         run: dotnet build ${{ inputs.solution-name }} --configuration ${{ env.CONFIGURATION }} --no-restore
