--- a/.github/workflows/test-app-ubuntu.yml
+++ b/.github/workflows/test-app-ubuntu.yml
@@ -162,15 +162,21 @@ jobs:
         if: ${{ inputs.coverage-report-retention-days >= 1 }}
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.COVERAGE_REPORT_ARTIFACT }}
+          name: '${{ env.COVERAGE_REPORT_ARTIFACT }}-${{ github.run_id }}'
           path: '**/*.cobertura.xml'
           retention-days: ${{ inputs.coverage-report-retention-days }}
 
-  coverage_report:
+  report_generator:
     name: 'Create coverage report'
+    if: ${{ github.ref_name == needs.test.outputs.head_branch && inputs.coverage-report-retention-days >= 1 }}
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ github.ref_name == needs.test.outputs.head_branch }}
+    env:
+      COVERAGE_REPORT_ARTIFACT: 'coverage-report'
+      ARTIFACTS_PATH: report_data
+      REPORTS_PATH: results
+      RESULT_ARTIFACTS_NAME: report-generator-results
+
     steps:
       - name: Install dotnet-reportgenerator
         run: |
@@ -179,13 +185,25 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
-            name: ${{ env.COVERAGE_REPORT_ARTIFACT }}
+            name: '${{ env.COVERAGE_REPORT_ARTIFACT }}-${{ github.run_id }}'
+            path: ${{ env.ARTIFACTS_PATH }}
+
+      - name: Run ReportGenerator
+        shell: bash
+        run: |
+          reportgenerator "-reports:${{ env.ARTIFACTS_PATH }}/*.xml" "-targetdir:${{ env.REPORTS_PATH }}" "-reporttypes:Cobertura"
+
+      - name: Upload reportgenerator artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: '${{ env.RESULT_ARTIFACTS_NAME }}-${{ github.run_id }}'
+          path: ${{ env.REPORTS_PATH }}
+          retention-days: 1
 
   calculate-storage-container-name:
     name: 'Calculate Storage Container Name'
     runs-on: ubuntu-latest
-    needs: [test, coverage_report]
-    if: ${{ github.ref_name == needs.test.outputs.head_branch }}
+    needs: report_generator
     continue-on-error: false
     outputs:
       storage_container_name: ${{ steps.get_container_name.outputs.name }}
@@ -197,11 +215,11 @@ jobs:
           NAME="${NAME//[^a-zA-Z0-9]/-}"
           echo "name=$NAME" >> $GITHUB_OUTPUT
 
-  # persist-coverage-reports:
-  #   needs: [test, coverage_report, calculate-storage-container-name]
-  #   if: ${{ github.ref_name == needs.test.outputs.head_branch }}
-  #   uses: WintDev/actions/.github/workflows/az-storage-upload.yml@experimental
-  #   with:
-  #     storage-container-name: ${{ needs.calculate-storage-container-name.outputs.storage_container_name }}
-  #     source: 
-  #   secrets: inherit
+  persist-coverage-reports:
+    needs: calculate-storage-container-name
+    uses: ./.github/workflows/az-storage-upload.yml
+    with:
+      storage-account-name: wintcodecoverage
+      storage-container-name: ${{ needs.calculate-storage-container-name.outputs.storage_container_name }}
+      artifacts-name: 'report-generator-results-${{ github.run_id }}'
+    secrets: inherit
